[package]
name = "draw-lr"
version = "0.1.0"
edition = "2021"
authors = ["Madhav Kumar"]
description = "An SDK to interact with pieces of the original Line Rider game"
repository = "https://github.com/kumar-ish/line-rider-rust/"
license = "MIT License"
keywords = ["gamedev", "graphics", "line_rider", "line-rider", "lr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
